--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,17 @@
 					  <%= link_to job_path(t.id) do %>
 				      <div class="thumbnail jobstyle showalljobthumbnail">
 				        <div class="thumbnailhoverclass">
-				          <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+								<% if t.category == "Cleaning" %>
+								  <%= image_tag("cleaningservice.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Catering" %>
+								  <%= image_tag("catering.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Mover" %>
+								  <%= image_tag("mover.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Plumbing" %>
+								  <%= image_tag("plumbing.png", class:"thumnail-image")%>
+								<% elsif t.category == "Gadget Repair" %>
+								  <%= image_tag("gadgetservice.jpg", class:"thumnail-image")%>
+								<% end %>
 				        <div class="overlay">
 				          <div class="overlaytext"><%= t.category %></div>
 				        </div>
@@ -81,7 +91,17 @@
 					  <%= link_to job_path(t.id) do %>
 				      <div class="thumbnail jobstyle showalljobthumbnail">
 				        <div class="thumbnailhoverclass">
-				          <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+								<% if t.category == "Cleaning" %>
+								  <%= image_tag("cleaningservice.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Catering" %>
+								  <%= image_tag("catering.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Mover" %>
+								  <%= image_tag("mover.jpg", class:"thumnail-image")%>
+								<% elsif t.category == "Plumbing" %>
+								  <%= image_tag("plumbing.png", class:"thumnail-image")%>
+								<% elsif t.category == "Gadget Repair" %>
+								  <%= image_tag("gadgetservice.jpg", class:"thumnail-image")%>
+								<% end %>
 				        <div class="overlay">
 				          <div class="overlaytext"><%= t.category %></div>
 				        </div>
