--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <!-- <link rel="stylesheet" href="assets/css/Footer-with-social-icons.css"> -->
 </head>
 <body>
+  <% flash.each do |key, value| %>
+      <div class="<%= flash_class(key) %>">
+            <%= value %>
+      </div>
+  <% end %>
   <%= yield %>
 </body>
 </html>
